--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Anthony Nixon</title>
+    <title>{{ .name }}</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/df88468b70.js" crossorigin="anonymous"></script>
     <link rel="icon" href="assets/images/favicon.ico?v=2" type="image/x-icon" />
