--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>{{ .name }}</title>
+    <title>{{ .Name }}</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/df88468b70.js" crossorigin="anonymous"></script>
     <link rel="icon" href="assets/images/favicon.ico?v=2" type="image/x-icon" />
@@ -19,14 +19,14 @@
 
 <body>
     <div id="profile">
-        <img id="userPhoto" src="assets/images/profile.png" alt="Profile picture of {{ .name }}">
+        <img id="userPhoto" src="assets/images/profile.png" alt="Profile picture of {{ .Name }}">
         <div id="userName">
-            <h1>{{ .name }}</h1>
-            <p>{{ .location }}</p>
+            <h1>{{ .Name }}</h1>
+            <p>{{ .Location }}</p>
         </div>
     </div>
     <div id="links">
-    {{ range .links }}
+    {{ range .Links }}
       <a {{ if .Attributes.rel }}rel="{{.Attributes.Rel}}"{{end}} href="{{.URL}}" class="link" target="_blank"><i class="{{.Icon}}" aria-hidden="true"></i> {{.Title}}</a>
     {{ end }}
     </div>
