--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -4,10 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>{{ .Name }}</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css{{ if .GitSHA }}?v={{ .GitSHA }}{{ end }}">
     <script src="https://kit.fontawesome.com/df88468b70.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="assets/images/favicon.ico?v=2" type="image/x-icon" />
-    <!-- Google tag (gtag.js) -->
+    <link rel="icon" href="assets/images/favicon.ico{{ if .GitSHA }}?v={{ .GitSHA }}{{ end }}" type="image/x-icon" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F5Q7RBGCKV"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -27,7 +26,7 @@
     </div>
     <div id="links">
     {{ range .Links }}
-      <a {{ if .Attributes.Rel }}rel="{{.Attributes.Rel}}"{{end}} href="{{.URL}}" class="link" target="_blank"><i class="{{.Icon}}" aria-hidden="true"></i> {{.Title}}</a>
+      <a {{ if .Attributes.rel }}rel="{{.Attributes.Rel}}"{{end}} href="{{.URL}}" class="link" target="_blank"><i class="{{.Icon}}" aria-hidden="true"></i> {{.Title}}</a>
     {{ end }}
     </div>
 </body>
