--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+{{ if .GitSHA }}<!-- links.ajn.me version {{ .GitSHA }} --> {{ end }}
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
