--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-{{ if .GitSHA }}<!-- links.ajn.me version {{ .GitSHA }} --> {{ end }}
-<html lang="en">
+<html lang="en"{{ if .GitSHA }} data-version="{{ .GitSHA }}"{{ end }}>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
